# FastAPI-sentiment-analysis-

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  model.py  pyproject.toml  tasks.py
