[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = "MLOps course FastAPI project"
authors = ["Alexander Ershov <aershov2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"
celery = "^5.4.0"
redis = "^5.0.5"
pika = "^1.3.2"
torch = "^2.3.1"
transformers = "^4.41.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
